Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=46819 Remove redundant object instantiations in JspRuntimeLibrary. Patch provided by Anthony Whitford.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1064929 13f79535-47bb-0310-9956-ffa450edef68